# mlch_dbd_act_web

./: .gitignore  README.md  pyproject.toml  run.py
src/: __init__.py  devices.py  views.py
src/static/: package.json  webpack.config.js
src/static/src/: index.html  index.js  panel.js
tests/: conftest.py  net_emul.py  test_esp32_requests.py
